--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Django
+*.log
+*.pot
+*.pyc
+db.sqlite3
+media/
+staticfiles/
+*.sqlite3
+
 .DS_Store
 .vscode
 .venv
